# Hospital

./: .$Требования к проекту.drawio.bkp  .$Требования к проекту.drawio.dtmp  .gitignore  Dockerfile  README.md  docker_start.bat  docker_stop.bat  main.py  Требования к проекту.drawio
backend/: Dockerfile  docker-compose.yml  docker_clear.bat  docket.bat  main.py  pyproject.toml
backend/AuthService/: config.py  main.py  pyproject.toml
backend/AuthService/app/: app.py  db.py  users.py
backend/AuthService/auth/: demo_auth.py
backend/AuthService/auth/certs/: jwt-private.pem  (+1 more)
backend/api/: address.py  area.py  check_up.py  check_up_places.py  dependencies.py  diagnosis.py  doctor.py  gender.py  patient.py  routers.py  symptom.py
backend/auth/: db.py  routes.py  schemas.py  service.py  users.py
backend/db/: database.py  hospital_backup.sql
backend/models/: __init__.py  addres_area.py  area.py  area_doctor.py  check_up.py  check_up_place.py  diagnosis.py  doctor.py  gender.py  patient.py  symptom.py  symptom_check_up.py
backend/repositories/: __init__.py  address.py  area.py  check_up.py  diagnosis.py  doctor.py  gender.py  patient.py  symptom.py
backend/schemas/: __init__.py  address_area.py  area.py  area_doctor.py  check_up.py  check_up_place.py  diagnosis.py  doctor.py  gender.py  patient.py  symptom.py  symptom_check_up.py
backend/services/: __init__.py  address.py  area.py  check_up.py  check_up_place.py  diagnosis.py  doctor.py  gender.py  patient.py  symptom.py
backend/utils/: __init__.py  check_up.py  doctor.py  patient.py  repository.py
(+76 files in other folders)
