[tool.poetry]
name = "mainservice"
version = "0.1.0"
description = ""
authors = ["Rubelewaskes <131644269+Rubelewaskes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.5"}
databases = "^0.9.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
uvicorn = "^0.32.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
